--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -63,6 +63,7 @@ set_real_ip_from 107.189.2.206;
 set_real_ip_from 107.189.28.124;
 set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.29.184;
+set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
@@ -118,13 +119,12 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.35.245.150;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.127.37.151;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
-set_real_ip_from 130.0.233.34;
-set_real_ip_from 130.0.236.83;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 135.125.128.107;
@@ -237,6 +237,7 @@ set_real_ip_from 172.81.132.94;
 set_real_ip_from 173.237.206.68;
 set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
+set_real_ip_from 173.44.141.34;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.227.215.50;
@@ -676,11 +677,11 @@ set_real_ip_from 194.15.112.133;
 set_real_ip_from 194.15.113.118;
 set_real_ip_from 194.15.115.212;
 set_real_ip_from 194.163.157.49;
-set_real_ip_from 194.164.122.21;
 set_real_ip_from 194.233.174.56;
 set_real_ip_from 194.26.192.161;
 set_real_ip_from 194.26.192.72;
 set_real_ip_from 194.26.192.77;
+set_real_ip_from 194.87.115.187;
 set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
@@ -705,6 +706,7 @@ set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
+set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.51.52;
@@ -737,6 +739,7 @@ set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::3348;
 set_real_ip_from 2001:41d0:304:200::9dce;
+set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:601:1100::6524;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:800:1f70::;
@@ -830,6 +833,7 @@ set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:ac8:22:43::20e5:a7d7;
 set_real_ip_from 2001:b011:4002:143e::b;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1020,6 +1024,7 @@ set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:a880:400:d0::28:6001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
+set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1095,6 +1100,7 @@ set_real_ip_from 2605:6400:30:f503::1;
 set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
+set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f671:3fc7:4bb4:ca18:86fa;
@@ -1185,7 +1191,6 @@ set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:83::a43b;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
-set_real_ip_from 2a00:da00:f23d:8f00::1;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
 set_real_ip_from 2a01:5e0:36:c311::1;
@@ -1230,6 +1235,7 @@ set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+set_real_ip_from 2a03:6f02::5366;
 set_real_ip_from 2a03:e600:100::1;
 set_real_ip_from 2a03:e600:100::2;
 set_real_ip_from 2a03:e600:100::3;
@@ -1295,6 +1301,8 @@ set_real_ip_from 2a07:e03:2a::bcde;
 set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
+set_real_ip_from 2a0b:7140:8:1:5054:ff:fe43:9f9;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1613,6 +1621,8 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1772,6 +1782,7 @@ set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
+set_real_ip_from 80.78.22.218;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
