--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -198,6 +198,7 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -530,7 +531,6 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
-allow 185.230.161.154;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.196;
@@ -692,8 +692,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.89;
 allow 195.47.238.90;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1181,6 +1181,7 @@ allow 27.255.75.198;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1475,7 +1476,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:2500:571:e95:f07a:97eb:f6ce:3e71;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -1502,7 +1502,6 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1622,7 +1621,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1809,6 +1807,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
@@ -1820,7 +1819,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
-allow 89.213.174.212;
 allow 89.221.217.206;
 allow 89.234.157.254;
 allow 89.236.112.100;
@@ -1845,6 +1843,7 @@ allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.223.2.140;
 allow 92.223.2.183;
 allow 92.243.24.163;
 allow 92.246.138.145;
