--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -198,6 +198,7 @@ deny 154.216.19.230;
 deny 154.26.159.157;
 deny 158.69.1.13;
 deny 160.119.249.240;
+deny 161.35.129.51;
 deny 161.97.174.64;
 deny 162.210.173.17;
 deny 162.216.18.62;
@@ -530,7 +531,6 @@ deny 185.225.69.203;
 deny 185.225.69.232;
 deny 185.227.134.106;
 deny 185.227.68.78;
-deny 185.230.161.154;
 deny 185.233.100.23;
 deny 185.241.208.115;
 deny 185.241.208.196;
@@ -692,8 +692,8 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.89;
 deny 195.47.238.90;
+deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1181,6 +1181,7 @@ deny 27.255.75.198;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1475,7 +1476,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:2500:571:e95:f07a:97eb:f6ce:3e71;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
@@ -1502,7 +1502,6 @@ deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:2859::1;
 deny 2a0f:9400:7e11:73bc::1;
-deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:9400:7e11:b60::1;
 deny 2a0f:9400:7e11:ce4d::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1622,7 +1621,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
 deny 45.129.84.247;
-deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.137.205.138;
@@ -1809,6 +1807,7 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
+deny 87.120.254.132;
 deny 88.80.20.86;
 deny 88.80.26.2;
 deny 88.80.26.3;
@@ -1820,7 +1819,6 @@ deny 89.147.110.82;
 deny 89.147.111.124;
 deny 89.147.111.87;
 deny 89.187.143.31;
-deny 89.213.174.212;
 deny 89.221.217.206;
 deny 89.234.157.254;
 deny 89.236.112.100;
@@ -1845,6 +1843,7 @@ deny 91.219.237.56;
 deny 91.219.239.166;
 deny 91.92.109.126;
 deny 91.92.109.43;
+deny 92.223.2.140;
 deny 92.223.2.183;
 deny 92.243.24.163;
 deny 92.246.138.145;
