--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -301,6 +301,7 @@ deny 2620:95:4007::111;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -595,7 +596,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:2500:571:e95:f07a:97eb:f6ce:3e71;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
@@ -622,7 +622,6 @@ deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:2859::1;
 deny 2a0f:9400:7e11:73bc::1;
-deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:9400:7e11:b60::1;
 deny 2a0f:9400:7e11:ce4d::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
