--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -275,6 +275,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 184.75.221.171;
 allow 185.100.85.132;
 allow 185.100.85.22;
 allow 185.100.85.23;
@@ -678,6 +679,7 @@ allow 194.26.192.161;
 allow 194.26.192.72;
 allow 194.26.192.77;
 allow 194.87.115.187;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.179.231.215;
@@ -687,8 +689,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.89;
+allow 195.47.238.90;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1516,6 +1518,8 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
+allow 2a10:c800:1:9cc6::1;
+allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
@@ -1826,6 +1830,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.188;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
