--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -275,6 +275,7 @@ set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
 set_real_ip_from 180.150.226.99;
+set_real_ip_from 184.75.221.171;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.85.22;
 set_real_ip_from 185.100.85.23;
@@ -678,6 +679,7 @@ set_real_ip_from 194.26.192.161;
 set_real_ip_from 194.26.192.72;
 set_real_ip_from 194.26.192.77;
 set_real_ip_from 194.87.115.187;
+set_real_ip_from 195.160.220.104;
 set_real_ip_from 195.176.3.23;
 set_real_ip_from 195.176.3.24;
 set_real_ip_from 195.179.231.215;
@@ -687,8 +689,8 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.92;
-set_real_ip_from 195.47.238.93;
+set_real_ip_from 195.47.238.89;
+set_real_ip_from 195.47.238.90;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -1516,6 +1518,8 @@ set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
 set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a0f:e586:f:f:fca1:db52:9055:cff3;
+set_real_ip_from 2a10:c800:1:9cc6::1;
+set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:a800:1:1:194:26:192:161;
 set_real_ip_from 2a12:a800:1:1:194:26:192:77;
@@ -1826,6 +1830,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.188;
+set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
