--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -199,6 +199,7 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -529,6 +530,7 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
+allow 185.230.163.104;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.196;
@@ -580,6 +582,7 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
+allow 188.68.52.247;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
@@ -689,8 +692,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.89;
 allow 195.47.238.90;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1019,7 +1022,6 @@ allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
-allow 2604:a00:50:2f:216:3eff:fe2c:e333;
 allow 2604:a880:400:d0::28:6001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
@@ -1472,6 +1474,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -1617,7 +1620,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1652,6 +1655,7 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.14.165.118;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.154.98.26;
@@ -1764,7 +1768,6 @@ allow 71.19.144.222;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
-allow 74.50.80.112;
 allow 74.82.47.194;
 allow 77.220.196.253;
 allow 77.37.3.7;
