--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -199,6 +199,7 @@ set_real_ip_from 154.216.19.230;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 158.69.1.13;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 161.97.174.64;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
@@ -529,6 +530,7 @@ set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
+set_real_ip_from 185.230.163.104;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
@@ -580,6 +582,7 @@ set_real_ip_from 188.68.36.28;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
+set_real_ip_from 188.68.52.247;
 set_real_ip_from 190.120.229.98;
 set_real_ip_from 190.211.254.97;
 set_real_ip_from 192.108.48.150;
@@ -689,8 +692,8 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.89;
 set_real_ip_from 195.47.238.90;
+set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -1019,7 +1022,6 @@ set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
-set_real_ip_from 2604:a00:50:2f:216:3eff:fe2c:e333;
 set_real_ip_from 2604:a880:400:d0::28:6001;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
@@ -1472,6 +1474,7 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1617,7 +1620,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1652,6 +1655,7 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
+set_real_ip_from 45.14.165.118;
 set_real_ip_from 45.148.10.111;
 set_real_ip_from 45.148.10.169;
 set_real_ip_from 45.154.98.26;
@@ -1764,7 +1768,6 @@ set_real_ip_from 71.19.144.222;
 set_real_ip_from 72.14.179.10;
 set_real_ip_from 72.211.49.235;
 set_real_ip_from 72.235.129.116;
-set_real_ip_from 74.50.80.112;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.37.3.7;
