--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -192,6 +192,7 @@ allow 154.216.16.21;
 allow 154.216.16.24;
 allow 154.216.17.140;
 allow 154.216.17.163;
+allow 154.216.17.57;
 allow 154.216.18.191;
 allow 154.216.18.227;
 allow 154.216.19.10;
@@ -199,7 +200,6 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -324,6 +324,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -692,7 +693,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -862,6 +863,7 @@ allow 205.185.123.93;
 allow 205.185.124.176;
 allow 205.185.124.193;
 allow 205.185.127.231;
+allow 206.206.127.213;
 allow 209.141.32.181;
 allow 209.141.32.198;
 allow 209.141.37.94;
@@ -1302,6 +1304,7 @@ allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+allow 2a0a:c801:1:5::57;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1501,7 +1504,6 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1706,6 +1708,7 @@ allow 51.195.166.174;
 allow 51.222.136.218;
 allow 51.222.142.67;
 allow 51.38.225.46;
+allow 5.181.156.44;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
@@ -1819,7 +1822,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
-allow 89.213.174.212;
 allow 89.221.217.206;
 allow 89.234.157.254;
 allow 89.236.112.100;
@@ -1828,8 +1830,10 @@ allow 89.58.26.216;
 allow 89.58.41.156;
 allow 91.132.144.59;
 allow 91.139.160.150;
+allow 91.188.254.218;
 allow 91.193.18.63;
 allow 91.202.5.104;
+allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
 allow 91.208.75.153;
